# Flora

./: .gitignore  CMakeLists.txt  README.md  SandBox.sln
Core/: CMakeLists.txt  CoreMinimal.h  EntryPoint.h
Core/Application/: Application.cpp  Application.h
Core/Common/: Common.cpp  Common.h  ForwardDeclare.h  GlobalType.h  Layout.cpp  Layout.h  Log.cpp  Log.h  Serialize.cpp  Serialize.h
Core/GUI/: EditorBase.h
Core/Geometry/: BaseType.h  StaticMesh.cpp  StaticMesh.h
Core/Render/: ExampleRenderer.cpp  ExampleRenderer.h  Renderer.cpp  Renderer.h
Core/Render/Proxy/: ProxyBase.cpp  ProxyBase.h
Core/Render/Proxy/Continer/: MaterialFieldContainer.cpp  MaterialFieldContainer.h  StaticMeshFieldContainer.cpp  StaticMeshFieldContainer.h  TextureFieldContainer.cpp  TextureFieldContainer.h
Core/Render/RHI/: RHI.cpp  RHI.h
Core/Render/RHI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLQuery.cpp  OpenGLQuery.h  OpenGLRHI.cpp  OpenGLRHI.h  OpenGLRenderBuffer.cpp  OpenGLRenderBuffer.h  OpenGLSampler.cpp  OpenGLSampler.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Core/Resource/: ResourceManager.h
Core/Resource/Struct/: Material.cpp  Material.h  ModelMesh.cpp  ModelMesh.h  Texture.cpp  Texture.h
Core/Scene/: Actor.cpp  Actor.h  Component.cpp  Component.h  Scene.cpp  Scene.h
Core/Scene/Struct/: Camera.cpp  Camera.h  Transform.cpp  Transform.h
Core/Window/: Window.cpp  Window.h
Core/Window/EGL/: EglWindow.cpp  EglWindow.h
Core/Window/GLFW/: GlfwWindow.cpp  GlfwWindow.h
Flora/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  Application.cpp  Application.h  Camera.cpp  Camera.h  CameraObject.cpp  CameraObject.h  Canvas.h  Component.cpp  Component.h  Console.cpp  Console.h  ContentBrowser.cpp  ContentBrowser.h  Core.cpp  Core.h  EntryPoint.h  Event.cpp  Event.h  Flora.h  Flora.vcxproj  Flora.vcxproj.filters  GameObject.cpp  GameObject.h  InputSystem.cpp  InputSystem.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Misc.h  OpenGLCanvas.cpp  OpenGLCanvas.h  OpenGLInterface.cpp  OpenGLInterface.h  OpenGLMaterial.cpp  OpenGLMaterial.h  (+36 more)
Flora/x64/Debug/: Flora.dll.recipe
GI/: Editor.cpp  Editor.h  PyRegister.h  main.cpp
GI/Shaders/: ShaderStructs.h
GI/Shaders/Core/: ShaderCore.glsl
GI/Shaders/Core/Buffer/: ByteAddressBuffer.glsl  StructuredBuffer.glsl
ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters  glad.h
MeshPartition/: Tessellation.h  Voxelization.cpp  Voxelization.h  main.cpp
MeshPartition/Shaders/: GpuScene.glsl  Partition.comp  ShaderDefines.h  ShaderStructs.h
OrthoCam/: main.cpp
OrthoCam/Shaders/: surface.frag  surface.vert
SandBox/: DebugCamera.cpp  DebugCamera.h  DebugScene_0.cpp  DebugScene_0.h  Editor.cpp  Editor.h  EditorScript.cpp  EditorScript.h  SandBox.cpp  SandBox.vcxproj  SandBox.vcxproj.filters  imgui.ini
SandBox/Cache/Animation/: model.fanimation
SandBox/Cache/Material/: DrawDebugCube.fmaterial  EquirectangularMapToCubemap.fmaterial  SkyBox.fmaterial  StandardOpacity.fmaterial  StandardPostprocess.fmaterial
SandBox/Cache/Mesh/: Cone.fmesh  Cube.fmesh  CubeFrame.fmesh  Cylinder.fmesh  Plane.fmesh  Screen.fmesh  Sphere.fmesh  Sponza_0.fmesh  Sponza_1.fmesh  Sponza_10.fmesh  Sponza_100.fmesh  Sponza_101.fmesh  Sponza_102.fmesh  Sponza_11.fmesh  Sponza_12.fmesh  Sponza_13.fmesh  Sponza_14.fmesh  Sponza_15.fmesh  Sponza_16.fmesh  Sponza_17.fmesh  Sponza_18.fmesh  Sponza_19.fmesh  Sponza_2.fmesh  Sponza_20.fmesh  Sponza_21.fmesh  Sponza_22.fmesh  Sponza_23.fmesh  Sponza_24.fmesh  Sponza_25.fmesh  Sponza_26.fmesh  Sponza_27.fmesh  Sponza_28.fmesh  Sponza_29.fmesh  Sponza_3.fmesh  Sponza_30.fmesh  Sponza_31.fmesh  Sponza_32.fmesh  Sponza_33.fmesh  Sponza_34.fmesh  Sponza_35.fmesh  (+94 more)
SandBox/Cache/Skeleton/: Sponza.fskeleton  model.fskeleton  naxida.fskeleton
SandBox/Cache/Texture/: black.ftexture  default.ftexture  diffuse.ftexture  directory.ftexture  file.ftexture  hair.ftexture  hair_s.ftexture  s1.ftexture  skin.ftexture  spa_h.ftexture  toon_defo.ftexture  white.ftexture  体1.ftexture  肌.ftexture  颜.ftexture  髮1.ftexture
template/: Editor.cpp.in  Editor.h.in  PyRegister.h.in  main.cpp.in
template/Shaders/: ShaderDefines.h.in  ShaderStructs.h.in
template/Shaders/Core/: ShaderCore.glsl.in
template/Shaders/Core/Buffer/: ByteAddressBuffer.glsl.in  StructuredBuffer.glsl.in
